# nit_grupni_projekat

./: README.md
backend/: package-lock.json  package.json  server.ts
backend/prisma/: dev.db  dev.db-journal  schema.prisma
backend/prisma/migrations/20250130193929_add_user_model/: migration.sql
backend/prisma/migrations/20250202181605_add_metadata/: migration.sql
backend/types/: Task.ts  request.ts
backend_rust/: Cargo.toml  data.sqlite
backend_rust/src/: main.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: auth.ts  task.ts
frontend/src/components/: DashboardCard.tsx  Navbar.tsx  Paper.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx  TaskList.tsx
