[package]
name = "backend_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
